<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:labelVisibilityMode="unlabeled"/>

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_finished" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_filled"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_bookmarked_white"
        android:title="@string/title_bookmark" />

</menu>